--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <hr>
   <div class="contact-me">
     <h2>Get In Touch</h2>
-    <h3>If love you love musical instrument as much as I do.</h3>
+    <h3>If you love musical instrument as much as I do.</h3>
     <p class="contact-message">Love musical instrument as much as I do? Let's talk about our experiences and how it makes you feel! We can code along side getting good at our musical instrument skills!</p>
     <a class="btn" href="mailto:Chukwubuikem.akobundu.243068@unn.edu.ng">CONTACT ME</a>
   </div>
