--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="skill-row">
       <img class="come" src="https://as1.ftcdn.net/v2/jpg/01/68/14/54/1000_F_168145479_nyYaAYlcFQgdZmJkK1T2xTLt3PoE9JWn.jpg" alt="drum image">
       <h3>Drum</h3>
-      <p>Since was 7years old, my interest for playing musical instrument grew and so decided to get good at one which is drumming 🙂, ever since then it gives me joy when ever I play them.</p>
+      <p>Since was I 7years old, my interest for playing musical instrument grew and so decided to get good at one which is drumming 🙂, ever since then it gives me joy when ever I play them.</p>
     </div>
   </div>
   <hr>
