--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class="profile">
     <img class="me"src="images/my image.png" alt="my profile picture">
     <h2>Hi.</h2>
-    <p class="intro">I am a Web Designer and Web Developer. I'm the Co-founder of A1 Blockchain Hub. I ❤️ playing drums as much as I love being innovative. I am not so proud to say this but, I learn so much through trials and errors. I love technology because its the future to come.</p>
+    <p class="intro">I am a Web Designer and Web Developer. I'm the Core team of A1 Blockchain Hub. I ❤️ playing drums as much as I love being innovative. I am not so proud to say this but, I learn so much through trials and errors. I love technology because its the future to come.</p>
   </div>
   <hr>
   <div class="skills">
